# pg3400-Programmerin-i-C-for-Linux

./: .gitignore  CMakeLists.txt
uke2/: linux.txt  matches.txt  myscript  text1.txt  text2.txt  text3.txt  tools.txt
uke2/code/: 4.c
uke3/: 1.c  2.c  3.c  4.c  5.c  6.c  7.c
uke4/: 2.c  3.c  lec4.txt
uke5/: 1.c  2.c  3.c  botgame.c  readme.txt
uke7/: lec7.txt
uke8/: lec8.txt
